unpackaged/main/default/objects/EnrollmentEligibilityCriteria/EnrollmentEligibilityCriteria.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>