unpackaged/main/default/objects/EnrollmentEligibilityCriteria/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <label>Criteria Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZIP</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>USA Resident</fullName>
            </value>
            <value>
                <fullName>No Awards</fullName>
            </value>
            <value>
                <fullName>Patient Needs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>