unpackaged/main/default/objects/EnrollmentEligibilityCriteria/fields/No_Income_in_Last_N_months__c.field-meta.xml
<CustomField>
    <fullName>No_Income_in_Last_N_months__c</fullName>
    <inlineHelpText>This denotes that the Care Program can be selected only if there is no awards in Last N months.</inlineHelpText>
    <label>No Award In Last N Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>