unpackaged/main/default/objects/EnrollmentEligibilityCriteria/fields/Patient_Need__c.field-meta.xml
<CustomField>
    <fullName>Patient_Need__c</fullName>
    <label>Patient Need</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Criteria_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Patient_Need</valueSetName>
    </valueSet>
</CustomField>