unpackaged/main/default/objects/EnrollmentEligibilityCriteria/fields/Percent_Of_Poverty_Guideline__c.field-meta.xml
<CustomField>
    <fullName>Percent_Of_Poverty_Guideline__c</fullName>
    <inlineHelpText>This field should be selected when a criteria as Income based, It denotes that the patient/applicant eligibility for care program only with in his/her income or household income below the poverty guidelines.</inlineHelpText>
    <label>Income Guideline/Percent Of Poverty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>