unpackaged/main/default/objects/EnrollmentEligibilityCriteria/validationRules/No_Award_In_Last_N_Months.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Award_In_Last_N_Months</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            ISPICKVAL(Criteria_Type__c , &apos;No Awards&apos;),
            ISNULL(No_Income_in_Last_N_months__c),
            !$Setup.Bypass__c.Validation__c,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot;,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;enrollmenteligibilitycriteria&quot;
        )</errorConditionFormula>
    <errorDisplayField>No_Income_in_Last_N_months__c</errorDisplayField>
    <errorMessage>Please enter value in this field.</errorMessage>
</ValidationRule>