unpackaged/main/default/objects/EnrollmentEligibilityCriteria/listViews/All_EnrollmentEligibilityCriteria.listView-meta.xml
<ListView>
    <fullName>All_EnrollmentEligibilityCriteria</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Enrollment Eligibility Criteria</label>
</ListView>